create add sale form

--- a/sales_tracker/templates/home.html
+++ b/sales_tracker/templates/home.html
@@ -3,5 +3,5 @@
 {%- block main_content %}
     <h1 class="title">Home page</h1>
 	<p class="description">Enjoy free and simple solution to track your sales</p>
-	<a class="action-button", href=" {{ url_for('pages.register') }} ">Register</a>
+	<a class="action__button", href=" {{ url_for('pages.register') }} ">Register</a>
 {% endblock %}
