--- a/sales_tracker/templates/register.html
+++ b/sales_tracker/templates/register.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
+{% from "macros/fields.html" import render_text_field %}
+{% extends "layout.html" %}
+
+{%- block main_content %}
 	<h1 class="title">Register</h1>
-</body>
-</html>
+    <form name="add sale" method="post" novalidate class="form">
+        <div class="form__container">
+            {{ form.hidden_tag() }}
+            {{ render_text_field(form.email)}}
+            {{ render_text_field(form.name)}}
+            {{ render_text_field(form.password)}}
+            
+            <div>
+                {{ form.submit(class="button button--form") }}
+            </div>
+        </div>
+        
+    </form>
+{% endblock %}
