add confirm password on registration

--- a/sales_tracker/templates/register.html
+++ b/sales_tracker/templates/register.html
@@ -9,6 +9,7 @@
             {{ render_text_field(form.email)}}
             {{ render_text_field(form.name)}}
             {{ render_text_field(form.password)}}
+            {{ render_text_field(form.confirm_password)}}
             
             <div>
                 {{ form.submit(class="button button--form") }}
