--- a/sales_tracker/templates/login.html
+++ b/sales_tracker/templates/login.html
@@ -4,6 +4,12 @@
 {%- block main_content %}
     <h1 class="title">Login</h1>
     <form name="login" method="post" novalidate class="form">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {%- for category, message in messages %}
+                <span class="form__flash form__flash--{{category}}">{{message}}</span>
+            {% endfor %}
+        {% endwith %}
+
         <div class="form__container">
             {{ form.hidden_tag() }}
             {{ render_text_field(form.email)}}
