--- a/sales_tracker/templates/macros/nav.html
+++ b/sales_tracker/templates/macros/nav.html
@@ -13,8 +13,13 @@
                     <span class="nav__item">register</span>
                 </a>
             {% else %}
-                <a href="{{ url_for('pages.add_sale') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.add_sale')}}">
+                <a href="{{ url_for('pages.logout') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.logout')}}">
+                    <span class="nav__item">logout</span>
                 </a>
+                <a href="{{ url_for('pages.sales') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.sales')}}">
+                    <span class="nav__item">add sales</span>
+                </a>
+
 
             {% endif %}
         </nav>
