--- a/sales_tracker/templates/personal_home.html
+++ b/sales_tracker/templates/personal_home.html
@@ -3,6 +3,22 @@
 {%- block main_content%}
     <h1 class="title">Welcome back, {{name}}!</h1>
     <!-- table of recent sales -->
+    <h2>Recent sales</h2>
+    <table class="table__sales">
+        <tr class="table__row table__row--header">
+            <!--generate headers-->
+            <th class="table__header">Product</th>
+            <th class="table__header">price</th>
+            <th class="table__header">date</th>
+        </tr>
+        {% for sale in sales %}
+            <tr class="table__row">
+                <td class="table__data"> {{sale.product}} </td>
+                <td class="table__data"> {{sale.cost}} </td>
+                <td class="table__data"> {{sale.date.date()}} </td>
+            </tr>            
+        {% endfor %}
+    </table>
     <!-- button to go to all sales (different page)-->
     <!-- add sale button (go to add_sale page) -->
 {% endblock %}
