--- a/sales_tracker/templates/login.html
+++ b/sales_tracker/templates/login.html
@@ -1,14 +1,11 @@
 {% from "macros/fields.html" import render_text_field %}
+{% from "macros/flash.html" import flash %}
 {% extends "layout.html" %}
 
 {%- block main_content %}
     <h1 class="title">Login</h1>
     <form name="login" method="post" novalidate class="form">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {%- for category, message in messages %}
-                <span class="form__flash form__flash--{{category}}">{{message}}</span>
-            {% endfor %}
-        {% endwith %}
+		{{ flash() }}
 
         <div class="form__container">
             {{ form.hidden_tag() }}
