--- a/sales_tracker/templates/sales_view.html
+++ b/sales_tracker/templates/sales_view.html
@@ -18,5 +18,20 @@
             </tr>            
         {% endfor %}
     </table>
-	
+
+        
+    <div>
+    {% if date['month'] == 12 %}
+            <a class="button__next" href = "{{url_for('pages.sales_view')}}?year={{date['year'] +1}}&month=1">next month</a>        
+    {% else %}
+            <a class="button__next" href = "{{url_for('pages.sales_view')}}?year={{date['year']}}&month={{date['month'] + 1}}">next month</a>
+    {% endif %}
+    
+    {% if date['month'] == 1 %}
+            <a class="button__next" href = "{{url_for('pages.sales_view')}}?year={{date['year'] -1}}&month=12">previous month</a>        
+    {% else %}
+            <a class="button__next" href = "{{url_for('pages.sales_view')}}?year={{date['year']}}&month={{date['month'] - 1}}">previous month</a>
+    {% endif %}
+            
+    </div>
 {% endblock %}
