--- a/sales_tracker/templates/layout.html
+++ b/sales_tracker/templates/layout.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>sales tracker</title>
-	<link rel="stylesheet" href="static/styles.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
 	{% block head_content %} {% endblock %}
 </head>
 <body>
