--- a/sales_tracker/templates/personal_home.html
+++ b/sales_tracker/templates/personal_home.html
@@ -1,7 +1,9 @@
+{% from 'macros/flash.html' import flash  %}
 {% extends "layout.html" %}
 
 {%- block main_content%}
     <h1 class="title">Welcome back, {{name}}!</h1>
+    {{ flash() }}
     <!-- table of recent sales -->
     <h2>Recent sales</h2>
     <table class="table__sales">
@@ -14,7 +16,7 @@
         {% for sale in sales %}
             <tr class="table__row">
                 <td class="table__data"> {{sale.product}} </td>
-                <td class="table__data"> {{sale.cost}} </td>
+                <td class="table__data"> {{sale.price}} </td>
                 <td class="table__data"> {{sale.date.date()}} </td>
             </tr>            
         {% endfor %}
