--- a/sales_tracker/templates/home.html
+++ b/sales_tracker/templates/home.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {%- block main_content %}
-    <h1 class="title">Home page</h1>
-	<p class="description">Enjoy free and simple solution to track your sales</p>
-	<a class="action__button", href=" {{ url_for('pages.register') }} ">Register</a>
+	<div class="container-xl text-center">
+		<h1 class="title">Home page</h1>
+		<p class="description">Enjoy free and simple solution to track your sales</p>
+		<a class="btn btn-primary" href=" {{ url_for('pages.register') }} " role="button">Register</a>
+	</div>
 {% endblock %}
