--- a/sales_tracker/templates/macros/fields.html
+++ b/sales_tracker/templates/macros/fields.html
@@ -1,10 +1,10 @@
 {%macro render_text_field(field) %}
 
-<div class="form__group">
-    {{ field.label(class="form__label") }}
-    {{ field(class="form__field")}}
+<div class="mt-2 {{'was-validated' if request.method == 'POST'}}">
+    {{ field.label(class="form-label") }}
+    {{ field(class="form-control")}}
     {% for error in field.errors %}
-        <span class="form__error">{{ error }}</span>
+        <span class="invalid-feedback">{{ error }}</span>
 
     {% endfor %}
 
