--- a/sales_tracker/templates/macros/flash.html
+++ b/sales_tracker/templates/macros/flash.html
@@ -1,7 +1,13 @@
 {% macro flash() %}
 	{% with messages = get_flashed_messages(with_categories=true) %}
 		{%- for category, message in messages %}
-			<span class="flash form__flash form__flash--{{category}}">{{message}}</span>
+		<div class="toast-container position-fixed bottom-0 end-0 p-3 flash">
+			<div class="toast show bg-{{category}}" role="alert" aria-live="assertive" aria-atomic="true">
+			  <div class="toast-body">
+				{{message}}
+			  </div>
+			</div>
+		</div>
 		{% endfor %}
 	{% endwith %}
 {% endmacro %}
