--- a/sales_tracker/templates/macros/nav.html
+++ b/sales_tracker/templates/macros/nav.html
@@ -1,30 +1,45 @@
 {% macro header(email,theme) %}
-<header class="header">
-    <div class="nav-container">
-        <a href="{{ url_for('pages.home') }}" class=" header__logo">
-            <!-- add logo --> logo
-        </a>
-        <nav class="nav">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+        
+            <li class="nav-item">
+                
+                <a href="{{ url_for('pages.home') }}" class="nav-link">
+                    <!-- add logo --> Home
+                </a>
+            </li>
+            
             {% if not email %}
-                <a href="{{ url_for('pages.login') }}" class="nav__link">
-                    <span class="nav__item">log in</span>
-                </a>
-                <a href="{{ url_for('pages.register') }}" class="nav__link">
-                    <span class="nav__item">register</span>
-                </a>
+            
+            <li class="nav-item">
+                <a href="{{ url_for('pages.login') }}" class="nav-link">log in</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{ url_for('pages.register') }}" class="nav-link">register</a>
+            </li>
+            
             {% else %}
-                <a href="{{ url_for('pages.logout') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.logout')}}">
-                    <span class="nav__item">logout</span>
-                </a>
-                <a href="{{ url_for('pages.sales') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.sales')}}">
+            
+            <li class="nav-item">
+                <a href="{{ url_for('pages.logout') }}" class="nav-link {{'active' if request.path == url_for('pages.logout')}}">logout</a>
+            </li>
+            
+            <li class="nav-item">
+                <a href="{{ url_for('pages.sales') }}" class="nav-link {{'active' if request.path == url_for('pages.sales')}}">
                     <span class="nav__item">add sales</span>
                 </a>
-                <a href="{{ url_for('pages.sales_view') }}" class="nav__link {{'nav__link--active' if request.path == url_for('pages.sales_view')}}">
+            </li>
+            
+            <li class="nav-item">
+                <a href="{{ url_for('pages.sales_view') }}" class="nav-link {{'active' if request.path == url_for('pages.sales_view')}}">
                     <span class="nav__item">sales history</span>
                 </a>
-
+            </li>
+            
             {% endif %}
-        </nav>
+            
+        </ul>
     </div>
-</header>
+</nav>
 {% endmacro %}
