--- a/sales_tracker/templates/personal_home.html
+++ b/sales_tracker/templates/personal_home.html
@@ -2,25 +2,32 @@
 {% extends "layout.html" %}
 
 {%- block main_content%}
+<div class="container-xl">
+
     <h1 class="title">Welcome back, {{name}}!</h1>
     {{ flash() }}
     <!-- table of recent sales -->
     <h2>Recent sales</h2>
-    <table class="table__sales">
-        <tr class="table__row table__row--header">
-            <!--generate headers-->
-            <th class="table__header">Product</th>
-            <th class="table__header">price</th>
-            <th class="table__header">date</th>
-        </tr>
-        {% for sale in sales %}
-            <tr class="table__row">
-                <td class="table__data"> {{sale.product}} </td>
-                <td class="table__data"> {{sale.price}} </td>
-                <td class="table__data"> {{sale.date.date()}} </td>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <!--generate headers-->
+                <th scope="col">Product</th>
+                <th scope="col">price</th>
+                <th scope="col">date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for sale in sales %}
+            <tr>
+                <td> {{sale.product}} </td>
+                <td> {{sale.price}} </td>
+                <td> {{sale.date.date()}} </td>
             </tr>            
-        {% endfor %}
+            {% endfor %}
+        </tbody>
     </table>
     <!-- button to go to all sales (different page)-->
     <!-- add sale button (go to add_sale page) -->
+</div>
 {% endblock %}
