--- a/sales_tracker/templates/register.html
+++ b/sales_tracker/templates/register.html
@@ -2,9 +2,10 @@
 {% extends "layout.html" %}
 
 {%- block main_content %}
+<div class="container-xl">
 	<h1 class="title">Register</h1>
     <form name="add sale" method="post" novalidate class="form">
-        <div class="form__container">
+        <div class="mb-a">
             {{ form.hidden_tag() }}
             {{ render_text_field(form.email)}}
             {{ render_text_field(form.name)}}
@@ -12,9 +13,10 @@
             {{ render_text_field(form.confirm_password)}}
             
             <div>
-                {{ form.submit(class="button button--form") }}
+                {{ form.submit(class="btn btn-primary my-4") }}
             </div>
         </div>
         
     </form>
+</div>
 {% endblock %}
